# CopilotJ

./: .dockerignore  .env.template  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  flake.nix  justfile  nginx.conf  pyproject.toml
.github/workflows/: deploy-pages.yml  docker-build.yml  release.yml  test.yaml
assets/code_base/: imagej_code.faiss  imagej_code.pkl
copilotj/: __init__.py
copilotj/core/: __init__.py  agent.py  config.py  message.py  model_client.py  pattern.py  runtime.py  tool.py  ui.py
copilotj/multiagent/: Executor.py  __init__.py  __main__.py  agent_loader.py  kb_tools.py  leader_multiagent.py  leader_prompts.py  py_tools.py  research_tools.py  test_agent.py  test_tool.py  tools.py  workflow_manager.py  workflow_tools.py
copilotj/plugin/: README.md  __init__.py  __main__.py  _base.py  api.py  image_capturer.py  imagej_listener.py  script_runner.py  snapshot_manager.py  summarizer.py
copilotj/server/: __init__.py  __main__.py  bridge.py  server.py  threads.py
copilotj/util/: __init__.py  base64.py  env.py  json.py  jupyter_notebook.py  markdown.py  react_parser.py  trie.py
data/deepimagej-plugin.wiki.zip-unzipped/: GPU-connection.md  Home.md  Installation-requirements.md  Java-processing.md  PyTorch-models.md  Region-proposal-and-pyramidal-feature-pooling-networks.md  TensorFlow-models.md  _Footer.md  _Sidebar.md
data/protocalDatabase/: plugin_macro_1.txt  workflow.txt
knowledge_bank/macro/: 3d-objects-counter.v1.toml  3d-project.v1.toml  IHC-profiler.toml  avoid.calling.non-existent.java.methods.v1.toml  bio-formats-importer.v1.toml  calcium.imaging.v1.toml  clij2.v1.toml  coloc-2.v1.toml  colour-deconvolution2.v1.toml  create.a.labeled.montage.by.v1.toml  deconvolutionLab2.toml  executes.the.deconvolutionlab2.plugin.headlessly.v1.toml  file.io.v1.toml  image.segmentation.v1.toml  image.visualization.toml  imagej.macro.v1.toml  macro.snippet.for.rotating.an.v1.toml  macro.to.resize.an.image.v1.toml  montage.v1.toml  motion.correction.v1.toml  (+9 more)
plugin/: pom.xml
templates/: README.md
web/: .env.development  Dockerfile  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+189 files in other folders)
