[project]
name = "CopilotJ"
version = "0.1.0"
description = "Chat ImageJ with LLM"
readme = "README.md"
authors = [
  { name = "Zexin Yuan", email = "pypi@yzx9.xyz" },
  { name = "Jack Lu", email = "1033138611@qq.com" },
  { name = "liux75", email = "liux750@chinaunicom.cn" },
]
requires-python = ">=3.12"
dependencies = [
  "aiohttp[speedups]>=3.11.12",
  "aiohttp-cors>=0.8.1",
  "ujson>=5.10.0",
  "pydantic>=2.10.6",
  "python-dotenv>=1.0.1",
  "openai>=1.63.2",
  "jsonref>=1.1.0",
  # console
  "click>=8.1.8",
  "rich>=13.9.4",
  "textual-image>=0.7.0",
  # pyimagej
  "pyimagej>=1.5.0",
  "ipython>=8.31.0",
  "ipykernel>=6.29.5",
  "jupyter-client>=8.6.3",
  # rag
  "wikipedia>=1.4.0",
  "playwright>=1.49.1",
  "selenium>=4.27.1",
  "beautifulsoup4>=4.12.3",
  "faiss-cpu>=1.9.0.post1",
  "langchain-openai>=0.2.14",
  # tools
  "langchain-community>=0.3.14",
  "scikit-image>=0.25.2",
  "biapy>=3.5.6",
  "matplotlib>=3.10.3",
  "cellpose==3.1.1.2",
  "torch>=2.7.1",
  "csbdeep>=0.8.1",
  "xarray==2024.11.0",
  "stardist>=0.9.1",
  "timm>=1.0.14",
  "tensorflow>=2.18.1",
  "torchmetrics>=1.7.3",
  "pytorch-msssim>=1.0.0",
  "langchain-core>=0.3.35",
  "langchain-google-genai>=2.1.5",
  "unstructured>=0.17.2",
  "fitz>=0.0.1.dev2",
  "napari-process-points-and-surfaces>=0.5.0",
  "opencv-python>=4.11.0.86",
  "opencv-contrib-python>=4.11.0.86",
  "pyclesperanto-prototype>=0.24.5",
  "trackpy>=0.6.4",
  "tavily-python>=0.7.10",
  "seaborn>=0.13.2",
  "plotly>=5.24.1",
  "kaleido>=1.0.0",
  "altair>=5.5.0",
  "holoviews>=1.21.0",
  "bokeh>=3.7.3",
  "pygal>=3.0.5",
  "plotly-resampler>=0.10.0",
  "langfuse>=3.3.2",
  "imageio>=2.37.0",
  "tifffile>=2025.1.10",
  "pystackreg>=0.2.8",
  "suite2p>=0.14.5",
  "ddgs>=9.10.0",
]

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-cov>=6.0.0", "ruff>=0.11.4"]

all = ["ollama>=0.4.8"]

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*Jupyter is migrating.*:DeprecationWarning"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["copilotj"]
format.docstring-code-format = true
lint.pydocstyle.convention = "google"
